# sujiro-kimiskute

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  README.es.md  README.fr.md  README.it.md  README.md  README.pt-BR.md  install.sh
docs/superpowers/plans/: 2026-07-17-idle-estimates-presence.md  2026-07-17-media-player-progress.md
docs/superpowers/specs/: 2026-07-17-media-player-progress-design.md
src/: config.rs  error.rs  localization.rs  main.rs  state.rs
src/discord/: client.rs  handler.rs  mod.rs  play_requests.rs  player_controls.rs  player_panel.rs  presence.rs
src/discord/commands/: leave.rs  mod.rs  pause.rs  play.rs  queue.rs  register.rs  resume.rs  skip.rs  stop.rs
src/discord/commands/play/: lifecycle.rs
src/player/: auto_leave.rs  guild_player.rs  idle_leave.rs  lifecycle.rs  manager.rs  mod.rs  observer.rs  play_requests.rs  playback.rs  playback_state.rs  queue.rs  session.rs  track.rs  voice_state.rs
src/player/guild_player/: control.rs  interrupt.rs  lifecycle.rs  play_requests.rs  queue.rs
src/player/playback/: previous.rs
src/sources/: mod.rs  resolver.rs
src/sources/youtube/: metadata.rs  mod.rs  process.rs  resolver.rs
src/voice/: connection.rs  events.rs  mod.rs
