[package]
name = "sujiro-kimiskute"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"

[dependencies]
async-trait = "0.1"
dotenvy = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serenity = { version = "0.12.5", default-features = false, features = ["builder", "cache", "client", "gateway", "http", "model", "rustls_backend"] }
shlex = "1"
songbird = { version = "0.6", default-features = false, features = ["driver", "gateway", "rustls", "serenity", "tungstenite"] }
symphonia = { version = "0.5.5", default-features = false, features = ["aac", "isomp4", "mkv", "mp3", "ogg", "pcm", "vorbis", "wav"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"
